test/files/pos/t12407/Test.scala
trait Test extends A.J
