test/files/neg/t12394/Test.scala
class S1 extends p.A.D
class S2 extends p.A.C with p.A.J
trait K extends p.A.J
class S3 extends p.A.C with K
